Lab3_Formatting/src/main/gen/JavaCodeParser.java
// Generated from C:/Users/chura/Х#й#я/MT/Lab3_Formatting/src/main/java/JavaCode.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class JavaCodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, KEY_package=11, KEY_import=12, KEY_switch=13, KEY_case=14, KEY_default=15, 
		KEY_STATEMENT=16, KEY_STATEMENT_REST=17, KEYWORD=18, STRING=19, NUMBER=20, 
		NAME=21, Langle=22, Rangle=23, Question=24, Colon=25, Star=26, UNO_OPER=27, 
		OPER=28, Comma=29, SPACE=30;
	public static final int
		RULE_code = 0, RULE_package = 1, RULE_imports = 2, RULE_imprt = 3, RULE_programmEntities = 4, 
		RULE_codeEntry = 5, RULE_declaration = 6, RULE_declarationBegin = 7, RULE_declarationPrefix = 8, 
		RULE_declarationRest = 9, RULE_codeBody = 10, RULE_innerCode = 11, RULE_executableLine = 12, 
		RULE_executableStatement = 13, RULE_statementDeclaration = 14, RULE_statementDeclaraitonRest = 15, 
		RULE_statementDeclarationScope = 16, RULE_statementDeclarationInScope = 17, 
		RULE_statementLineEnd = 18, RULE_switchStatement = 19, RULE_switchDeclare = 20, 
		RULE_switchBody = 21, RULE_switchCode = 22, RULE_case = 23, RULE_default = 24, 
		RULE_funcDeclarationArgs = 25, RULE_funcDeclarationArg = 26, RULE_argTypeToken = 27, 
		RULE_vararg = 28, RULE_declareValue = 29, RULE_value = 30, RULE_unoValue = 31, 
		RULE_unoValueKeyWord = 32, RULE_unoValueGet = 33, RULE_justValue = 34, 
		RULE_funcToken = 35, RULE_funcCalledArgs = 36, RULE_typeToken = 37, RULE_varToken = 38, 
		RULE_keyWordAndTokens = 39, RULE_typeTokensComma = 40, RULE_keyWord = 41, 
		RULE_unoOper = 42, RULE_oper = 43;
	private static String[] makeRuleNames() {
		return new String[] {
			"code", "package", "imports", "imprt", "programmEntities", "codeEntry", 
			"declaration", "declarationBegin", "declarationPrefix", "declarationRest", 
			"codeBody", "innerCode", "executableLine", "executableStatement", "statementDeclaration", 
			"statementDeclaraitonRest", "statementDeclarationScope", "statementDeclarationInScope", 
			"statementLineEnd", "switchStatement", "switchDeclare", "switchBody", 
			"switchCode", "case", "default", "funcDeclarationArgs", "funcDeclarationArg", 
			"argTypeToken", "vararg", "declareValue", "value", "unoValue", "unoValueKeyWord", 
			"unoValueGet", "justValue", "funcToken", "funcCalledArgs", "typeToken", 
			"varToken", "keyWordAndTokens", "typeTokensComma", "keyWord", "unoOper", 
			"oper"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'.'", "'('", "')'", "'{'", "'}'", "'while'", "'...'", "'['", 
			"']'", "'package'", "'import'", "'switch'", "'case'", "'default'", null, 
			null, null, null, null, null, "'<'", "'>'", "'?'", "':'", "'*'", null, 
			null, "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "KEY_package", 
			"KEY_import", "KEY_switch", "KEY_case", "KEY_default", "KEY_STATEMENT", 
			"KEY_STATEMENT_REST", "KEYWORD", "STRING", "NUMBER", "NAME", "Langle", 
			"Rangle", "Question", "Colon", "Star", "UNO_OPER", "OPER", "Comma", "SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JavaCode.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavaCodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodeContext extends ParserRuleContext {
		public ProgrammEntitiesContext programmEntities() {
			return getRuleContext(ProgrammEntitiesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JavaCodeParser.EOF, 0); }
		public PackageContext package_() {
			return getRuleContext(PackageContext.class,0);
		}
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).exitCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaCodeVisitor ) return ((JavaCodeVisitor<? extends T>)visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_code);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KEY_package) {
				{
				setState(88);
				package_();
				}
			}

			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KEY_import) {
				{
				setState(91);
				imports();
				}
			}

			setState(94);
			programmEntities();
			setState(95);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PackageContext extends ParserRuleContext {
		public TerminalNode KEY_package() { return getToken(JavaCodeParser.KEY_package, 0); }
		public TypeTokenContext typeToken() {
			return getRuleContext(TypeTokenContext.class,0);
		}
		public PackageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_package; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).enterPackage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).exitPackage(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaCodeVisitor ) return ((JavaCodeVisitor<? extends T>)visitor).visitPackage(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PackageContext package_() throws RecognitionException {
		PackageContext _localctx = new PackageContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_package);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(KEY_package);
			setState(98);
			typeToken();
			setState(99);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportsContext extends ParserRuleContext {
		public List<ImprtContext> imprt() {
			return getRuleContexts(ImprtContext.class);
		}
		public ImprtContext imprt(int i) {
			return getRuleContext(ImprtContext.class,i);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).enterImports(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).exitImports(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaCodeVisitor ) return ((JavaCodeVisitor<? extends T>)visitor).visitImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(101);
				imprt();
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KEY_import );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImprtContext extends ParserRuleContext {
		public TerminalNode KEY_import() { return getToken(JavaCodeParser.KEY_import, 0); }
		public TypeTokenContext typeToken() {
			return getRuleContext(TypeTokenContext.class,0);
		}
		public TerminalNode Star() { return getToken(JavaCodeParser.Star, 0); }
		public ImprtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imprt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).enterImprt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).exitImprt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaCodeVisitor ) return ((JavaCodeVisitor<? extends T>)visitor).visitImprt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImprtContext imprt() throws RecognitionException {
		ImprtContext _localctx = new ImprtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_imprt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(KEY_import);
			setState(107);
			typeToken();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(108);
				match(T__1);
				setState(109);
				match(Star);
				}
			}

			setState(112);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgrammEntitiesContext extends ParserRuleContext {
		public List<CodeEntryContext> codeEntry() {
			return getRuleContexts(CodeEntryContext.class);
		}
		public CodeEntryContext codeEntry(int i) {
			return getRuleContext(CodeEntryContext.class,i);
		}
		public ProgrammEntitiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programmEntities; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).enterProgrammEntities(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).exitProgrammEntities(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaCodeVisitor ) return ((JavaCodeVisitor<? extends T>)visitor).visitProgrammEntities(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgrammEntitiesContext programmEntities() throws RecognitionException {
		ProgrammEntitiesContext _localctx = new ProgrammEntitiesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_programmEntities);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(114);
				codeEntry();
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KEYWORD || _la==NAME );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodeEntryContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public CodeBodyContext codeBody() {
			return getRuleContext(CodeBodyContext.class,0);
		}
		public CodeEntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeEntry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).enterCodeEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).exitCodeEntry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaCodeVisitor ) return ((JavaCodeVisitor<? extends T>)visitor).visitCodeEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeEntryContext codeEntry() throws RecognitionException {
		CodeEntryContext _localctx = new CodeEntryContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_codeEntry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			declaration();
			setState(120);
			codeBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public DeclarationBeginContext declarationBegin() {
			return getRuleContext(DeclarationBeginContext.class,0);
		}
		public DeclarationRestContext declarationRest() {
			return getRuleContext(DeclarationRestContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaCodeVisitor ) return ((JavaCodeVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			declarationBegin();
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==KEYWORD) {
				{
				setState(123);
				declarationRest();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationBeginContext extends ParserRuleContext {
		public DeclarationPrefixContext declarationPrefix() {
			return getRuleContext(DeclarationPrefixContext.class,0);
		}
		public FuncDeclarationArgsContext funcDeclarationArgs() {
			return getRuleContext(FuncDeclarationArgsContext.class,0);
		}
		public DeclarationBeginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationBegin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).enterDeclarationBegin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).exitDeclarationBegin(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaCodeVisitor ) return ((JavaCodeVisitor<? extends T>)visitor).visitDeclarationBegin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationBeginContext declarationBegin() throws RecognitionException {
		DeclarationBeginContext _localctx = new DeclarationBeginContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declarationBegin);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			declarationPrefix();
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(127);
				match(T__2);
				setState(128);
				funcDeclarationArgs();
				setState(129);
				match(T__3);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationPrefixContext extends ParserRuleContext {
		public List<KeyWordContext> keyWord() {
			return getRuleContexts(KeyWordContext.class);
		}
		public KeyWordContext keyWord(int i) {
			return getRuleContext(KeyWordContext.class,i);
		}
		public List<TypeTokenContext> typeToken() {
			return getRuleContexts(TypeTokenContext.class);
		}
		public TypeTokenContext typeToken(int i) {
			return getRuleContext(TypeTokenContext.class,i);
		}
		public DeclarationPrefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationPrefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).enterDeclarationPrefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).exitDeclarationPrefix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaCodeVisitor ) return ((JavaCodeVisitor<? extends T>)visitor).visitDeclarationPrefix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationPrefixContext declarationPrefix() throws RecognitionException {
		DeclarationPrefixContext _localctx = new DeclarationPrefixContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declarationPrefix);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(135); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(135);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case KEYWORD:
						{
						setState(133);
						keyWord();
						}
						break;
					case NAME:
						{
						setState(134);
						typeToken();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(137); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationRestContext extends ParserRuleContext {
		public List<KeyWordAndTokensContext> keyWordAndTokens() {
			return getRuleContexts(KeyWordAndTokensContext.class);
		}
		public KeyWordAndTokensContext keyWordAndTokens(int i) {
			return getRuleContext(KeyWordAndTokensContext.class,i);
		}
		public DeclarationRestContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationRest; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).enterDeclarationRest(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).exitDeclarationRest(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaCodeVisitor ) return ((JavaCodeVisitor<? extends T>)visitor).visitDeclarationRest(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationRestContext declarationRest() throws RecognitionException {
		DeclarationRestContext _localctx = new DeclarationRestContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_declarationRest);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(139);
				keyWordAndTokens();
				}
				}
				setState(142); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==KEYWORD );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CodeBodyContext extends ParserRuleContext {
		public InnerCodeContext innerCode() {
			return getRuleContext(InnerCodeContext.class,0);
		}
		public CodeBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).enterCodeBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).exitCodeBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaCodeVisitor ) return ((JavaCodeVisitor<? extends T>)visitor).visitCodeBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeBodyContext codeBody() throws RecognitionException {
		CodeBodyContext _localctx = new CodeBodyContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_codeBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(T__4);
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 536682506L) != 0)) {
				{
				setState(145);
				innerCode();
				}
			}

			setState(148);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InnerCodeContext extends ParserRuleContext {
		public ProgrammEntitiesContext programmEntities() {
			return getRuleContext(ProgrammEntitiesContext.class,0);
		}
		public List<ExecutableLineContext> executableLine() {
			return getRuleContexts(ExecutableLineContext.class);
		}
		public ExecutableLineContext executableLine(int i) {
			return getRuleContext(ExecutableLineContext.class,i);
		}
		public List<ExecutableStatementContext> executableStatement() {
			return getRuleContexts(ExecutableStatementContext.class);
		}
		public ExecutableStatementContext executableStatement(int i) {
			return getRuleContext(ExecutableStatementContext.class,i);
		}
		public List<SwitchStatementContext> switchStatement() {
			return getRuleContexts(SwitchStatementContext.class);
		}
		public SwitchStatementContext switchStatement(int i) {
			return getRuleContext(SwitchStatementContext.class,i);
		}
		public InnerCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_innerCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).enterInnerCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavaCodeListener ) ((JavaCodeListener)listener).exitInnerCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JavaCodeVisitor ) return ((JavaCodeVisitor<? extends T>)visitor).visitInnerCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InnerCodeContext innerCode() throws RecognitionException {
		InnerCodeContext _localctx = new InnerCodeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_innerCode);
		int _la;
		try {
			setState(158);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				programmEntities();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					setState(154);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__0:
					case T__2:
					case KEYWORD:
					case STRING:
					case NUMBER:
					case NAME:
					case Langle:
					case Rangle:
					case Question:
					case Colon:
					case Star:
					case UNO_OPER:
					case OPER:
						{
						setState(151);
						executableLine();
						}
						break;
					case KEY_STATEMENT:
						{
						setState(152);
						executableStatement();
						}
						break;
					case KEY_switch:
						{
						setState(153);
						switchStatement();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(156); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 536682506L) != 0) );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
